--- a/digifood-app/src/app/menu/menu.component.html
+++ b/digifood-app/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
-<nav>
+<nav id="nav">
 <app-bar-nav [categories]="cart.categories" (returnCat)="changeProductList($event)"></app-bar-nav>
 </nav>
 
-<main>
-  <app-product-list [products]="products"></app-product-list>
+<main id="content">
+  <app-product-list [productList]="products"></app-product-list>
 </main>
