add cart in header

--- a/digifood-app/src/app/component/header/header.component.html
+++ b/digifood-app/src/app/component/header/header.component.html
@@ -2,8 +2,11 @@
   <div class="col-6">
     <img src="../../../assets/images/digifood_logo.png" alt="logo digifood" height="100px"/>
   </div>
-  <div class="col-6">
+  <div class="col-4">
     <button class="headerBtn" [routerLink]="['/cart']">Le menu</button>
+  </div>
+  <div class="col-2">
+    <i class="fa fa-shopping-cart cart"></i>
   </div>
 </header>
 
