--- a/digifood-app/src/app/menu/product.list/product.list.component.html
+++ b/digifood-app/src/app/menu/product.list/product.list.component.html
@@ -1,8 +1,8 @@
 <div class="row productsBloc">
   <div class="col-xl-4 col-lg-6 col-12 prodDiv" *ngFor="let product of productList">
-    <div class="prodImg" [style.backgroundImage]="'url('+ product.image +')'">
+    <div class="prodImg" [style.backgroundImage]="'url('+product.image +')'" title="Ajouter au panier">
       <div class="layer">
-
+        <i class="fa fa-cart-arrow-down addCart"></i>
       </div>
     </div>
     <div class="row prodDetail">
