--- a/digifood-app/src/app/menu/menu.component.scss
+++ b/digifood-app/src/app/menu/menu.component.scss
@@ -1,17 +1,76 @@
-@media screen and (min-width: 992px) {
-  #nav{
-    position: fixed;
-    left: 0;
-    width: 250px;
-    background: rgba(128, 81, 81, 0.36);
-    height: 100%;
-    border-right: 1px solid #bf1531;
-  }
-  #content{
-    margin-left: 250px;
+//navigation
+.navBloc{
+  padding: 20px 15%;
+  .catDiv{
+    text-align: center;
+    .catBtn{
+      padding: 20px 30px;
+      border-radius: 10px;
+      border: 1px solid #bf1531;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      background-size: cover;
+      background-position-y: center;
+    }
+    @media screen and (max-width: 992px) {
+      .catBtn{
+        padding: 10px 15px;
+      }
+    }
+    .catBtn:hover{
+      color: #bf1531;
+    }
   }
 }
 @media screen and (max-width: 992px) {
-
+  .navBloc{
+    padding: 20px 5%;
+  }
 }
 
+//product list
+.productsBloc{
+  padding: 20px 10%;
+  .prodDiv{
+    text-align: center;
+    margin: 20px 0;
+    .prodImg{
+      margin: 0 auto;
+      height: 250px;
+      width: 250px;
+      border: 2px solid #bf1531;
+      cursor: pointer;
+      .addCart{
+        display: none;
+        padding-top: 20px;
+      }
+    }
+    .prodImg:hover{
+      .layer{
+        background-color: rgba(64, 18, 18, 0.85);
+        width: 100%;
+        height: 100%;
+        .addCart{
+          display: block;
+          color: red;
+          font-size: 50px;
+        }
+      }
+    }
+    .prodDetail{
+      width: 250px;
+      margin: 0 auto;
+    }
+    .name{
+      text-align: left;
+
+    }
+    .price{
+      padding: 5px 0;
+      border: 2px solid #bf1531;
+      border-top: none;
+      border-radius: 0 0 5px 5px;
+    }
+  }
+}
