cart modal + toast

--- a/digifood-app/src/app/app.component.html
+++ b/digifood-app/src/app/app.component.html
@@ -1,9 +1,4 @@
-<header>
-  <app-header id="header"></app-header>
-</header>
-
-
-<div #content id="content" class="content">
+<div #content id="content">
   <router-outlet></router-outlet>
 </div>
 
