--- a/digifood-app/src/app/app.component.css
+++ b/digifood-app/src/app/app.component.css
@@ -6,7 +6,7 @@
   z-index: 90;
 }
 
-#header, #content, #footer {
+#content, #footer {
   left: 0;
   width: 100%;
 }
@@ -15,12 +15,5 @@
   margin-top: 100px;
 }
 
-#header {
-  position: fixed;
-  z-index: 90;
-  top: 0;
-  box-shadow: 0 2px 6px grey;
-  background-color: white;
-}
 
 
