--- a/digifood-app/src/app/component/header/header.component.html
+++ b/digifood-app/src/app/component/header/header.component.html
@@ -6,7 +6,7 @@
     <button class="headerBtn" [routerLink]="['/cart']">Le menu</button>
   </div>
   <div class="col-2">
-    <i class="fa fa-shopping-cart cart"></i>
+    <i class="fa fa-shopping-cart cart" (click)="openCart()"></i>
   </div>
 </header>
 
