--- a/digifood-app/src/app/menu/cart/cart.component.html
+++ b/digifood-app/src/app/menu/cart/cart.component.html
@@ -1,3 +1,38 @@
-<p>
-  cart works!
-</p>
+<div role="dialog" aria-labelledby="Panier">
+  <div class="modal-header">
+    <h1 id="eventModalTitle" class="modal-title">Votre commande :</h1>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.close(null)">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <ngx-datatable
+      #table
+      class="material striped"
+      [rows]="rows"
+      [columnMode]="'force'"
+      [messages]="{emptyMessage: 'Aucun produit dans le panier.', selectedMessage:'Sélection(s)', totalMessage:'Total'}">
+      <ngx-datatable-column prop="name" name="Produit"></ngx-datatable-column>
+      <ngx-datatable-column prop="price" name="Prix"></ngx-datatable-column>
+      <ngx-datatable-column name="Quantité" prop="stock">
+        <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
+          <i class="fa fa-minus-square chtStockBtn" (click)="removeStock(row)"></i>
+          <input type="text" class="stockInput" [value]="row.cartStock" disabled>
+          <i class="fa fa-plus-square chtStockBtn" (click)="addStock(row)"></i>
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Montant">
+        <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
+          <span>{{row.price * row.cartStock }} €</span>
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
+
+
+    <span>Nombre de produits : {{totStock}}</span>
+    <div>
+      <h2>Montant total: {{totPrice}} €</h2>
+    </div>
+    <button value="Valider" (click)="validate()">Valider</button>
+  </div>
+</div>
