nombre tot produits à côté du panier

--- a/digifood-app/src/app/component/header/header.component.html
+++ b/digifood-app/src/app/component/header/header.component.html
@@ -6,6 +6,7 @@
     <button class="headerBtn" [routerLink]="['/cart']">Le menu</button>
   </div>
   <div class="col-2">
+    <span>{{totProd}}</span>
     <i class="fa fa-shopping-cart cart" (click)="openCart()"></i>
   </div>
 </header>
