--- a/digifood-app/src/app/menu/menu.component.html
+++ b/digifood-app/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <header>
-  <app-header [cart]="cart" id="header"></app-header>
+  <app-header [cart]="cart" [totProd]="totProd" id="header"></app-header>
 </header>
 
 <nav id="nav">
