--- a/digifood-app/src/app/menu/cart/cart.component.html
+++ b/digifood-app/src/app/menu/cart/cart.component.html
@@ -1,38 +1,44 @@
 <div role="dialog" aria-labelledby="Panier">
   <div class="modal-header">
-    <h1 id="eventModalTitle" class="modal-title">Votre commande :</h1>
+    <h1 id="eventModalTitle" class="modal-title">Votre commande </h1>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close(null)">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div>
+  </div><br>
   <div class="modal-body">
-    <ngx-datatable
-      #table
-      class="material striped"
-      [rows]="rows"
-      [columnMode]="'force'"
-      [messages]="{emptyMessage: 'Aucun produit dans le panier.', selectedMessage:'Sélection(s)', totalMessage:'Total'}">
-      <ngx-datatable-column prop="name" name="Produit"></ngx-datatable-column>
-      <ngx-datatable-column prop="price" name="Prix"></ngx-datatable-column>
-      <ngx-datatable-column name="Quantité" prop="stock">
-        <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
-          <i class="fa fa-minus-square chtStockBtn" (click)="removeStock(row)"></i>
-          <input type="text" class="stockInput" [value]="row.cartStock" disabled>
-          <i class="fa fa-plus-square chtStockBtn" (click)="addStock(row)"></i>
-        </ng-template>
-      </ngx-datatable-column>
-      <ngx-datatable-column name="Montant">
-        <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
-          <span>{{row.price * row.cartStock }} €</span>
-        </ng-template>
-      </ngx-datatable-column>
-    </ngx-datatable>
-
-
-    <span>Nombre de produits : {{totStock}}</span>
-    <div>
-      <h2>Montant total: {{totPrice}} €</h2>
+    <div *ngIf="rows.length!=0">
+      <ngx-datatable
+        #table
+        class="material striped"
+        [rows]="rows"
+        [columnMode]="'force'"
+        [messages]="{emptyMessage: 'Aucun produit dans le panier.', selectedMessage:'Sélection(s)', totalMessage:'Total'}">
+        <ngx-datatable-column prop="name" name="Produit"></ngx-datatable-column>
+        <ngx-datatable-column prop="price" name="Prix"></ngx-datatable-column>
+        <ngx-datatable-column cellClass="centerCell" name="Quantité" prop="stock">
+          <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
+            <i class="fa fa-minus-square chtStockBtn" (click)="lessStock(row)"></i>
+            <input type="text" class="stockInput" [value]="row.cartStock" disabled>
+            <i class="fa fa-plus-square chtStockBtn" (click)="moreStock(row)"></i>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column cellClass="centerCell" name="Montant">
+          <ng-template #modifyBtn let-row="row"  ngx-datatable-cell-template>
+            <span>{{row.price * row.cartStock }} €</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [maxWidth]="15" cellClass="trashCell" name="">
+          <ng-template #modifyBtn let-row="row" ngx-datatable-cell-template>
+            <i class="fa fa-trash" (click)="removeProd(row)"></i>
+          </ng-template>
+        </ngx-datatable-column>
+      </ngx-datatable>
     </div>
-    <button value="Valider" (click)="validate()">Valider</button>
+<br>
+    <span>Nombre de produits : {{totStock}}</span>
+    <h2>Montant total: {{totPrice}} €</h2>
+    <div class="validateDiv">
+      <button class="validateBtn" value="Valider" (click)="validate()">Valider</button>
+    </div>
   </div>
 </div>
