--- a/digifood-app/src/app/menu/menu.component.html
+++ b/digifood-app/src/app/menu/menu.component.html
@@ -13,9 +13,9 @@
 <main id="content">
   <div class="row productsBloc">
     <div class="col-xl-4 col-lg-6 col-12 prodDiv" *ngFor="let product of products">
-      <div class="prodImg" [style.backgroundImage]="'url('+product.image +')'" title="Ajouter au panier">
-        <div class="layer">
-          <i class="fa fa-cart-plus addCart" (click)="addCart(product)"></i>
+      <div class="prodImg" [style.backgroundImage]="cleanUrl(product.image)" title="Ajouter au panier">
+        <div class="layer" (click)="addCart(product)">
+          <i class="fa fa-cart-plus addCart"></i>
         </div>
       </div>
       <div class="row prodDetail">
